# kurve

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debug.sh  install.sh  kurve.desktop  players.json  template.desktop  uninstall.sh
.github/workflows/: main.yml  ubuntu-build.yml
docs/: CDabbreviation.plantuml  README.md  classDiagram.plantuml  document.tex  references.bib  test.plantuml
docs/uml/: CDabbreviation.plantuml  font.plantuml  game.plantuml  menu.plantuml  mesh.plantuml  model.plantuml  player_manager.plantuml  playermanager.plantuml
include/: ai_model.hpp  arrow_mesh.hpp  arrow_model.hpp  bitmap.h  border_mesh.hpp  border_model.hpp  display.hpp  font.hpp  ft2build.h  game.hpp  game_over.hpp  gl_calls.hpp  grid.hpp  kurve  line_mesh.hpp  line_model.hpp  menu.hpp  mesh.hpp  model.hpp  obj.h  player_manager.hpp  player_mesh.hpp  player_model.hpp  point.hpp  renderer.hpp  shader.hpp  side_panel.hpp  user.hpp
include/glad/: glad.h
models/: affe  ring  teapot  whatever
scripts/: debug.sh  install.sh
settings/: players.json
shader/: arrow.vs  circle.vs  circle_fragment.glsl  circle_vertex.glsl  font.fs  font.vs  fragment.glsl  line.vs  player.vs  vertex.glsl
snap/: snapcraft.yaml
snap/gui/: kurve.desktop
src/: ai_model.cpp  arrow_mesh.cpp  arrow_model.cpp  bitmap.c  border_mesh.cpp  border_model.cpp  display.cpp  font.cpp  game.cpp  game_over.cpp  gl_calls.cpp  glad.c  grid.cpp  line_mesh.cpp  line_model.cpp  main.cpp  menu.cpp  mesh.cpp  model.cpp  obj.c  player_manager.cpp  player_mesh.cpp  player_model.cpp  point.cpp  renderer.cpp  shader.cpp  side_panel.cpp  test.plantuml  user.cpp
static/settings/: players.json
static/shader/: border.fs  border.vs  line.vs  player.vs
